--- a/src/style/index.css
+++ b/src/style/index.css
@@ -25,7 +25,7 @@ header {
 }
 
 .main-container {
-  height: 1200px;
+  height: 1100px;
   display: flex;
   flex-flow: column wrap;
   align-content: center;
@@ -69,4 +69,42 @@ header {
   margin: 15px 15px;
   text-decoration: none;
   color: rgb(0, 89, 253);
+}
+
+.left-aside {
+  margin: 0 15px;
+  height: 100%;
+  width: 170px;
+}
+
+.about-container {
+  margin-top: 10px;
+  background-color: #f7f7f7;
+  padding: 10px;
+}
+
+.about-title {
+  padding: 0;
+  margin: 30px 0 10px 0;
+  font-style: italic;
+}
+
+.about-content {
+  padding: 0;
+  margin: 0 0 15px 0;
+}
+
+.archives-container {
+  margin: 20px 0 0 0;
+}
+
+.archives-title {
+  padding: 0;
+  margin: 0 0 10px 0;
+  font-style: italic;
+}
+
+.archives-link-container {
+  display: flex;
+  flex-flow: column;
 }
