--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,6 +4,10 @@ html {
   padding: 0;
 }
 
+input {
+  padding: 8px;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
@@ -25,7 +29,8 @@ header {
 }
 
 .main-container {
-  height: 1100px;
+  padding-bottom: 50px;
+  height: 950px;
   display: flex;
   flex-flow: column wrap;
   align-content: center;
@@ -107,4 +112,51 @@ header {
 .archives-link-container {
   display: flex;
   flex-flow: column;
+}
+
+.right-aside {
+  width: 300px;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+
+.login-form {
+  height: 200px;
+  margin: 15px;
+  padding: 30px;
+  background-color: #f7f7f7;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.email-input {
+  border-radius: 0.2em 0.2em 0 0;
+  border: 1px solid #888888;
+  width: 100%;
+  height: 35px;
+}
+
+.password-input {
+  border-radius: 0 0 0.2em 0.2em;
+  width: 100%;
+  height: 35px;
+  border: 1px solid #888888;
+  border-top: none;
+}
+
+.remember-me-checkbox {
+  margin: 5px 0;
+}
+
+.submit-button {
+  margin-top: 20px;
+  width: 100%;
+  height: 30px;
+  border-radius: 0.2em;
+  border: none;
+  color: white;
+  background-color: rgb(66, 132, 255);
 }
