--- a/src/style/index.css
+++ b/src/style/index.css
@@ -152,11 +152,30 @@ header {
 }
 
 .submit-button {
-  margin-top: 20px;
+  margin-top: 10px;
   width: 100%;
-  height: 30px;
+  height: 50px;
   border-radius: 0.2em;
   border: none;
   color: white;
   background-color: rgb(66, 132, 255);
+}
+
+.footer {
+  background-color: #f7f7f7;
+  padding: 20px;
+  box-shadow: 0 0 2px #888888;
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+}
+
+.footer-first-line {
+  padding: 0;
+  margin: 0;
+}
+
+.footer-second-line {
+  padding: 0;
+  margin: 0;
 }
